[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "name_matching"
version = "0.1.0"
description = "Machine learning pipeline for entity resolution of company names"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Roy Moore", email = "roy.moore@ing.com"}
]
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "rapidfuzz",
    "unidecode",
    "regex",
    "joblib",
]

[tool.setuptools]
packages = ["src"]